# rocinante

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  codemap.md  integration_log.jsonl
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
docs/: bill-of-materials.html  bill-of-materials.md  ci-optimization-file.html  feature-list.html  github-setup.md  product-roadmap.html  project-rules.html  publish-readiness-checklist.html
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: check-dependabot-esbuild-alert.sh  check-esbuild-lock.mjs  dependency-floor-proof.sh  harden-github.sh
src-tauri/: CHANGELOG.md  Cargo.toml  codemap.md  tauri.conf.json
src-tauri/src/: admin.rs  app_support.rs  ast_cache.rs  auth.rs  badger_sidecar.rs  budget_guard.rs  ci_gate.rs  codemap.md  engine.rs  errors.rs  fix_proposal.rs  git.rs  git_providers.rs  import.rs  incident_feedback.rs  lib.rs  main.rs  observability.rs  onprem.rs  policy.rs  retention.rs  risk_contract.rs  roadmap_coherence.rs  scoring.rs  snapshots.rs  storage.rs  tauri_commands.rs  team_policies.rs  telemetry.rs  triage.rs  types.rs  verifier.rs
src-tauri/src/plugins/: ast_metrics.rs  code_quality.rs  codemap.md  complexity.rs  mod.rs  parser.rs  pr_approval.rs  sanitizer.rs  velocity.rs
src-tauri/tests/: admin_ingestion_guard_tests.rs  admin_service_tests.rs  analytics_snapshot_tests.rs  auth_tests.rs  baseline_delta_tests.rs  budget_guard_tests.rs  ci_gate_tests.rs  codemap.md  engine_tests.rs  fix_proposal_tests.rs  fmt_module_order_tests.rs  git_module_tests.rs  git_provider_tests.rs  gtk_free_host_migration_plan_tests.rs  incident_feedback_tests.rs  ingestion_backend_tests.rs  ingestion_transport_tests.rs  onprem_and_errors_tests.rs  parser_plugin_tests.rs  pr_risk_contract_tests.rs  publish_gate_docs_tests.rs  release_baseline_handler_tests.rs  release_baseline_storage_tests.rs  release_baseline_tests.rs  roadmap_coherence_tests.rs  roadmap_completion_tests.rs  sanitizer_tests.rs  scoring_audit_tests.rs  scoring_helpers_tests.rs  scoring_integrity_tests.rs  security_advisory_exception_tests.rs  storage_boundary_tests.rs  storage_duallayer_tests.rs  storage_policy_tests.rs  tauri_command_tests.rs  team_policy_tests.rs  telemetry_tests.rs  triage_tests.rs  verifier_tests.rs
ui/: codemap.md  (+5 more)
(+51 files in other folders)
