[package]
name = "rocinante-repo-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "repo_analyzer_core"
path = "src/lib.rs"

[[bin]]
name = "rocinante-repo-analyzer"
path = "src/main.rs"

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
tauri = { version = "2", default-features = false, features = ["wry"] }
sled = "0.34"
duckdb = { version = "1.1", features = ["bundled"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
