[package]
name = "rocinante-repo-analyzer"
version = "0.1.1"
edition = "2021"
rust-version = "1.96.1"

[lib]
name = "repo_analyzer_core"
path = "src/lib.rs"

[[bin]]
name = "rocinante-repo-analyzer"
path = "src/main.rs"
test = false

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
tauri = { version = "2", default-features = false, features = ["wry"] }
sled = "0.34"
duckdb = { version = "1.1", features = ["bundled"], optional = true }
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"

[features]
default = ["analytics"]
analytics = ["duckdb"]

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", default-features = false, features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
debug = 0

[profile.test]
debug = 0
